<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bagarre Déchainée</string>
    <string name="logo_du_jeu">Logo du jeu</string>
    <string name="s_enregistrer">S\'enregistrer</string>
    <string name="pseudo">Pseudo</string>
    <string name="change_account">Creer un nouveau compte</string>
    <string name="image_de_profil">Image de profil</string>
    <string name="volume_on">Volume on</string>
    <string name="partie_solo">Partie solo</string>
    <string name="fl_au_du_bouton_partie_solo">Fleau du bouton partie solo</string>
    <string name="option">option</string>
    <string name="change_pseudo">Etes vous sur de vouloir changer de pseudo ?</string>
    <string name="définitivement">Cela supprimera votre precedent compte définitivement.</string>
    <string name="continuer_new_pseudo">Continuer + New Pseudo</string>
    <string name="new_pseudo">New Pseudo</string>
    <string name="old_pseudo">Old Pseudo</string>
    <string name="bouton_nouveau_pseudo">Bouton nouveau pseudo</string>
    <string name="ib_new_pseudo">Nouveau pseudo image bouton</string>
    <string name="ib_old_pseudo">Old pseudo image bouton</string>
    <string name="retour">Retour</string>
    <string name="debut_game">Lancez la partie</string>
    <string name="join_lobby">Rejoindre le lobby</string>
    <string name="create_game">Créer partie</string>
    <string name="join_game">Rejoindre une partie</string>
    <string name="solo_game">Partie Solo</string>
    <string name="online_game">Partie en ligne</string>
    <string name="options">Options</string>
    <string name="left_guy">left guy</string>
    <string name="right_guy">right guy</string>
    <string name="left_guy_under_light">left guy under light</string>
    <string name="right_guy_under_light">right guy under light</string>
    <string name="touch_screen_to_go">Touchez l\'écran pour continuer</string>
    <string name="volume">Volume</string>
    <string name="musique">Musique</string>

    <string-array name="image_array">
        <item>profil1</item>
        <item>profil2</item>
        <item>profil3</item>
        <item>profil4</item>
    </string-array>

    <string-array name="playerID">
        <item>Tri</item>
        <item>Philippe</item>
        <item>Mathias</item>
        <item>Inan</item>
        <item>PetitCailloux</item>

    </string-array>


    <integer-array name="numLobby">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
</resources>
