<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvAlert1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/change_pseudo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvAlert2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/définitivement"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:contentDescription="@string/ib_new_pseudo"
                android:minWidth="50dp"
                android:minHeight="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pano_pseudo" />

            <ImageButton
                android:id="@+id/ibOldAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:contentDescription="@string/ib_old_pseudo"
                android:minWidth="50dp"
                android:minHeight="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pano_pseudo" />

            <TextView
                android:id="@+id/tvOldAccount"
                android:layout_width="142dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="11dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/old_pseudo"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/ibOldAccount"
                app:layout_constraintTop_toTopOf="@+id/ibOldAccount" />

            <TextView
                android:id="@+id/tvNewAccount"
                android:layout_width="142dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="11dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/new_pseudo"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/ibNewAccount"
                app:layout_constraintTop_toTopOf="@+id/ibNewAccount" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>