<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="false"
    android:onClick="nextAct"
    tools:context=".BeginningAnimation">

    <FrameLayout
        android:id="@+id/flBackLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/eclairage"
        android:clickable="false"
        android:visibility="invisible">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llChara"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/left_guy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/left_guy"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/left_guy2" />

        <ImageView
            android:id="@+id/right_guy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/right_guy"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/right_guy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLightChara"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/light_left_guy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/left_guy_under_light"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/light_left_character" />

        <ImageView
            android:id="@+id/light_right_guy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/right_guy_under_light"
            android:scaleType="fitEnd"
            android:visibility="invisible"
            app:srcCompat="@drawable/light_right_character" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/titre_bagarre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:contentDescription="@string/logo_du_jeu"
            android:paddingStart="200dp"
            android:paddingEnd="200dp"
            android:scaleType="centerInside"
            android:visibility="invisible"
            app:srcCompat="@drawable/titre_solo" />

        <ImageView
            android:id="@+id/touch_screen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:clickable="false"
            android:contentDescription="@string/touch_screen_to_go"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/touchtocontinue" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/volumeBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/volume_on"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:onClick="toggleMute"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>