<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameMode">

    <ImageView
        android:id="@+id/background"
        android:layout_width="935dp"
        android:layout_height="345dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/part8" />

    <ImageButton
        android:id="@+id/volumeBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/volume_on"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivPanoPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pano_flat" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="198dp"
        android:layout_height="35dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPseudo"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/image_de_profil"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvPseudo"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:fontFamily="@font/minecraft"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/pseudo"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="19sp" />

    </LinearLayout>

    <Spinner
        android:id="@+id/imageSp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <ImageView
        android:id="@+id/fleau"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/fl_au_du_bouton_partie_solo"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/soloBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/soloBtn"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:srcCompat="@drawable/fleau"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/soloBtn"
        android:layout_width="282dp"
        android:layout_height="40dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_change"
        android:contentDescription="@string/partie_solo"
        android:fontFamily="@font/minecraft"
        android:minHeight="48dp"
        android:text="@string/partie_solo"
        android:textColor="@color/font_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Button
        android:id="@+id/soloOnLine"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_change"
        android:contentDescription="@string/partie_solo"
        android:fontFamily="@font/minecraft"
        android:minHeight="48dp"
        android:text="@string/online_game"
        android:textColor="@color/font_change"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soloBtn" />

    <TextView
        android:id="@+id/tvBrawlerBtn"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:fontFamily="@font/minecraft"
        android:gravity="center_horizontal|center_vertical"
        android:text="Mode Brawler"
        android:textAllCaps="true"
        android:textColor="#F4EDED"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:layout_editor_absoluteX="399dp"
        tools:layout_editor_absoluteY="122dp" />


    <ImageView
        android:id="@+id/perso_left"
        android:layout_width="68dp"
        android:layout_height="110dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perso1" />

    <ImageView
        android:id="@+id/perso_right"
        android:layout_width="69dp"
        android:layout_height="110dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perso2" />

    <ImageView
        android:id="@+id/sword_left"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="216dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/soloOnLine"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swords_left" />

    <ImageView
        android:id="@+id/sword_right"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="136dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/soloOnLine"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swords_right" />

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="165dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_change"
        android:contentDescription="@string/option"
        android:fontFamily="@font/minecraft"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:text="@string/options"
        android:textColor="@color/font_change"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soloOnLine"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/ecrou"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/optionsBtn"
        app:layout_constraintTop_toBottomOf="@+id/soloOnLine"
        app:srcCompat="@drawable/ecrou" />

</androidx.constraintlayout.widget.ConstraintLayout>