<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgrnd_online"
    tools:context=".MultiJoueurActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="492dp"
        android:layout_height="91dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/titre" />

    <Button
        android:id="@+id/creerPartie"
        android:layout_width="314dp"
        android:layout_height="43dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_change"
        android:fontFamily="@font/minecraft"
        android:text="@string/create_game"
        android:textColor="@color/font_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/rejoindrePartie"
        android:layout_width="324dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_change"
        android:fontFamily="@font/minecraft"
        android:text="@string/join_game"
        android:textColor="@color/font_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creerPartie"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRetourMainMenu"
        android:layout_width="204dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_change"
        android:fontFamily="@font/minecraft"
        android:text="@string/retour"
        android:textColor="@color/font_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rejoindrePartie" />
		
</androidx.constraintlayout.widget.ConstraintLayout>